# remill-windows-template

./: .gitignore  .gitmodules  CALL.md  CLAUDE.md  CMakeLists.txt  FUNCTION_INLINING.md  INDIRECT_BRANCHES.md  ITERATIVE_LIFTING.md  JXX.md  MEMORY.md  POINTER_ANALYSIS.md  README.md  RET_BUG.md  STACK.md  UNREACHABLE.md  prompts.md
.claude/: settings.local.json
.claude/tasks/: NO_HELPER_FUNCTIONS.md  PUSH_RET.md
cmake/: FindLLVM-Wrapper.cmake  add_asm_lifting_test.cmake  add_cpp_lifting_test.cmake  add_cpp_obfuscated_test.cmake  add_external_call_test.cmake  add_pluto_test.cmake  add_variable_test.cmake  check_exit_code.cmake  check_external_call_ir.cmake  run_variable_tests.cmake
docs/: ITERATIVE_LIFTING.md  ITERATIVE_LIFTING_2.md  ITERATIVE_LIFTING_2_ISSUE_1.md  SWITCH_FLATTENING.md
src/helloworld/: main.cpp  runtime.ll  test_harness.cpp
src/lifting/: block_decoder.cpp  block_decoder.h  block_terminator.cpp  block_terminator.h  control_flow_lifter.cpp  control_flow_lifter.h  external_call_handler.cpp  external_call_handler.h  function_splitter.cpp  function_splitter.h  indirect_jump_resolver.cpp  indirect_jump_resolver.h  instruction_lifter.cpp  instruction_lifter.h  lifting_context.cpp  lifting_context.h  memory_lowering.cpp  memory_lowering.h  memory_provider.cpp  memory_provider.h  variable_config.cpp  variable_config.h  wrapper_builder.cpp  wrapper_builder.h
src/obfuscation/: obfuscator.cpp
src/obfuscation/pluto/: BogusControlFlowPass.cpp  CMakeLists.txt  CryptoUtils.cpp  Flattening.cpp  GlobalEncryption.cpp  IndirectCall.cpp  MBAObfuscation.cpp  MBAUtils.cpp  Substitution.cpp
src/obfuscation/pluto/include/Pluto/: GlobalEncryption.h  IndirectCall.h  Substitution.h
src/optimization/: optimizer.cpp  optimizer.h  stack_slot_splitter.cpp  stack_slot_splitter.h
src/tests/: CMakeLists.txt  lifter.cpp  main.cpp
src/tests/const/: asm_tests.cmake  basic_return.asm  call_with_loop.asm  cpp_tests.cmake  direct_branch.asm  global_memory.asm  global_var_pluto.cpp  indirect_branch.asm  loops.asm  main.cpp  non_returning_call.asm  obfuscated_tests.cmake  rdata_to_stack.asm  ret_const.cpp  xtea_global_encryption.cpp  xtea_mba.cpp
src/tests/obfuscation/pluto/: pluto_tests.cmake  xtea_roundtrip.cpp
src/tests/ret_with_code/: call_func.asm  global_var_write.asm  indirect_branch.asm  indirect_jmp.asm  loop_sum.asm  main.cpp  or_const.asm  shellcode.asm  stack_memory.asm  stack_var_write.asm  test_main.cpp  unaligned_read.asm  unaligned_stack_read.asm  xtea_indirect_call.cpp  xtea_noinline.cpp
src/tests/variable/: add_const.asm  add_const.config.json  external_call_tests.cmake  global_var.asm  global_var.config.json  global_var_original_va.config.json  main.cpp  main_wrapper.cpp  puts_global_const.config.json  puts_global_const.cpp  puts_stack.config.json  puts_stack.cpp  puts_xorstr.config.json  puts_xorstr.cpp  variable_tests.cmake
src/tools/: ir_checker.cpp  variable_ir_checker.cpp
src/utils/: debug_flag.cpp  debug_flag.h  module_utils.cpp  module_utils.h  pe_reader.cpp  pe_reader.h
